<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">MyChatApp</string>
    <string name="welcome_text">Welcome to Whatsup Clone</string>
    <string name="have_account">Already Have Account</string>
    <string name="need_account">Need Account</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="login" tools:ignore="ExtraTranslation">Login</string>
    <string name="create_a_new_account">Create A new Account</string>
    <string name="display_name">Display Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
