<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:background="@drawable/bg"
        tools:context=".CreateAccountActivity">
    <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:background="@color/colorAccent"
            android:layout_centerInParent="true"
            app:cardCornerRadius="13dp"
            android:elevation="4dp"
            app:cardUseCompatPadding="true"
            android:layout_width="300dp"
            android:layout_height="300dp">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent">
            <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/chat_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
            <TextView
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="10dp"
                    android:textSize="18sp"
                    android:textColor="#fff"
                    android:text="@string/create_a_new_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_marginTop="10dp"
                    android:paddingStart="50dp"
                    android:paddingEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                        android:id="@+id/accountDisplayNameEt"
                        android:background="@drawable/selector_bg_edit_2"
                        android:inputType="textPersonName"
                        android:hint="@string/display_name"
                        android:paddingBottom="10dp"
                        android:textColor="#f0f7f4"
                        android:textSize="14sp"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <EditText
                        android:id="@+id/accountEmailEt"
                        android:background="@drawable/selector_bg_edit_2"
                        android:inputType="textEmailAddress"
                        android:hint="@string/enter_email"
                        android:paddingBottom="10dp"
                        android:textColor="#f0f7f4"
                        android:textSize="14sp"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                <EditText
                        android:id="@+id/accountPasswrodEt"
                        android:background="@drawable/selector_bg_edit_2"
                        android:inputType="textPassword"
                        android:hint="@string/enter_password"
                        android:paddingBottom="10dp"
                        android:textColor="#f0f7f4"
                        android:textSize="14sp"
                        android:textCursorDrawable="@drawable/bg_input_cursor_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                <RelativeLayout
                        android:layout_marginTop="15dp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="45dp">
                    <Button
                            android:id="@+id/accountCreateActBtn"
                            android:background="@drawable/bt_shape"
                            android:stateListAnimator="@drawable/state_list_animator_z"
                            android:layout_width="150dp"
                            android:text="@string/create_a_new_account"
                            android:textColor="#d3d3d3"
                            android:layout_height="50dp"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>