<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity"
        android:background="@drawable/bg"
        android:id="@+id/mainActivity">

    <ImageView
            android:layout_width="163dp"
            android:layout_height="174dp"
            app:srcCompat="@drawable/chat_icon"
            android:id="@+id/imageView"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintVertical_bias="0.013"/>
    <TextView
            android:text="TextView"
            android:textStyle="bold|italic"
            android:layout_width="267dp"
            android:layout_height="29dp"
            android:textSize="18sp"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:id="@+id/textView"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            tools:text="@string/welcome_text"/>
    <Button
            android:text="@string/have_account"
            android:layout_width="320dp"
            android:layout_height="46dp"
            android:id="@+id/loginBtn"
            android:textColor="@color/grey_100"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:background="@color/colorAccent"/>
    <Button
            android:text="@string/need_account"
            android:layout_width="320dp"
            android:layout_height="46dp"
            android:textColor="@color/grey_100"
            android:textStyle="bold"
            android:id="@+id/createActButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/loginBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:background="@color/colorAccent"/>
    <!--<fragment-->
            <!--android:id="@+id/navHostFragment"-->
            <!--android:name="androidx.navigation.fragment.NavHostFragment"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--app:navGraph="@navigation/nav_graph"-->
            <!--app:defaultNavHost="true"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>